# Semesterprojekt-i-autonome-robotter

./: .gitignore  README.md  chess_engine.cpp  frames.gv  stockfish_com.cpp  workspace.code-workspace
Board_code/: CMakeLists.txt  fix.cpp  main.cpp  save10.cpp  savehello.cpp  savemain.cpp  savemain2.cpp  test52.cpp  workingmain.cpp
GUITest/: README.md  main.cpp
Serialport/: SerialPort.cpp  SerialPort.h  main.cpp  serial  test1
chess/: Linuxtest  Linuxtest.cpp  README.md  SerialPort.cpp  crossPlatformTest.cpp  endnuenmain.cpp  main.cpp  old_stockfish.h  old_stockfishLinux.cpp  stock_to_pico  stockfishLinux.cpp  stockfishLinux.h  stockfishLinuxTest  stockfishWindows.cpp  stockfishtopico.cpp  test10  test123  test123.cpp  test5  test6  test7  test8  test9  testStockfish  testStockfish.cpp  testx
gripperkode/: controller
gripperkode/Gripper/: CMakeLists.txt  adc.cpp  main.cpp  pwm.cpp  save1.cpp  save2.cpp  save3.cpp  save4.cpp  save5.cpp  save6.cpp  save7.cpp  save8.cpp  save9.cpp  test1.cpp  test2.cpp  test3.cpp
gripperkode/gripperdata/: gripper_plot  main.cpp
kicad/: fp-info-cache  kicad.kicad_pcb  ~kicad.kicad_pcb.lck
src/my_ur5_controller/: CMakeLists.txt  CMakeLists.txt.save  package.xml
src/my_ur5_controller/launch/: ur5_sim.launch  ur5_startup.launch
src/my_ur5_controller/src/: #include "stockfishLinux.cpp  SerialPort.cpp  SerialPort.h  closeopen.cpp  coordinatemove.cpp  main-2.cpp  my_robot_control.cpp  obstacle_manager.cpp  pico_button_listener.cpp  setup_scene.cpp  stockfishLinux.cpp  ur5_button_control.cpp  ur5_moveit_control.cpp  youtube.cpp
usbtest/: 123  closeopen  pc_moves_sender  pc_moves_sender.cpp  pico_comm  pico_comm.cpp  test67  test68  test69.cpp  usb_sender
usbtest/pio_pwm/: CMakeLists.txt  main.cpp
usbtest/usbtest/: CMakeLists.txt  main.cpp
